Fix flex wrap for details page

--- a/src/components/Countries.module.css
+++ b/src/components/Countries.module.css
@@ -6,6 +6,7 @@
     margin: 100px auto;
     max-width: 80vw;
     list-style: none;
+    font-size: 14px;
 }
 
 .li {
@@ -19,7 +20,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 78vw;
+    width: 80vw;
     margin: 50px auto;
 }
 
@@ -35,6 +36,14 @@
     gap: 5px;
     margin-top: 50px;
     cursor: text;
+}
+
+.input {
+    border: none;
+    outline: none;
+    padding-left: 20px;
+    font-size: 16px;
+    width: 320px;
 }
 
 .selectWrapper {
@@ -73,15 +82,6 @@
     background-repeat: no-repeat;
   }
 
-.input {
-    border: none;
-    outline: none;
-    padding-left: 20px;
-    font-size: 16px;
-    width: 320px;
-}
-
-
 .dark {
     background-color: #2b3945;
     color: #fff;
@@ -110,11 +110,27 @@
     }
     .inputWrapper {
         width: 300px;
-        padding: 20px 0 20px 20px;
+        padding-right: 20px;
         margin-top: 20px;
     }
 
     .input {
         width: 240px;
+    }
+}
+
+@media (max-width: 450px) {
+    .ul {
+        justify-content: center;
+        margin: 50px 0;
+    }
+    .inputWrapper {
+        width: 250px;
+        padding-right: 10px;
+        margin-top: 20px;
+    }
+
+    .input {
+        width: 150px;
     }
 }
