--- a/src/components/Country.module.css
+++ b/src/components/Country.module.css
@@ -8,7 +8,7 @@ img {
     padding: 20px;
 }
 
-a {
+.lower a {
     text-decoration: none;
     color: #111517;
 }
